--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 			</div>
 			<div class="col-md-5 col-xs-5">
 				<menu>
-						<ul>
-								<a href="index.html" class="active">
-									<li>Каталог</li>
-								</a>
-								<a href="">
-									<li>Доставка и оплата</li>
-								</a>
-								<a href="">
-									<li>О нас</li>
-								</a>
-								<a href="">
-									<li>Контакты</li>
-								</a>
-							</ul>	
-					</menu>
-					<form>
-						<input id="search" type="text" name="search" placeholder="Поиск" >
-						<input id="btn" type="submit" name="" class="submit" value="">				
-					</form>
+					<ul>
+						<a href="index.html" class="active">
+							<li>Каталог</li>
+						</a>
+						<a href="">
+							<li>Доставка и оплата</li>
+						</a>
+						<a href="">
+							<li>О нас</li>
+						</a>
+						<a href="">
+							<li>Контакты</li>
+						</a>
+					</ul>	
+				</menu>
+				<form>
+					<input id="search" type="text" name="search" placeholder="Поиск" >
+					<input id="btn" type="submit" name="" class="submit" value="">				
+				</form>
 
 			</div>
 			<div class="col-md-4 text-right cpl-xs-2">				
-					<div id="right">
+				<div id="right">
 					<div class="akk">
 						<a href="#"><img src="images/yourakk.png"></a>
 						<a href="#"><img src="images/basket.png"></a>
@@ -45,33 +45,99 @@
 						<span id="number"><img src="images/iphone.png"> (093) 254-15-90</span> <br><span id="work"> Режим работы: с 9.00 до 21.00</span>
 						
 					</p>
-					</div>
+				</div>
 			</div>
 		</header>
-</div>
-		<div class="menu">
-			<div class="menucontent">
-				<ul class="main-menu">
-					<li><a href="">Спальня</a></li>
-					<li><a href="">Гостиная</a></li>
-					<li><a href="">Прихожая</a></li>
-					<li>
-						<a href="">Детская комната</a>
-						<ul  class="sub-menu">
-							<li><a href="">Детские кровати</a></li>
-							<li><a href="">Комоды</a></li>
-							<li><a href="">Шкафы-купе</a></li>
-							<li><a href="">Детские стенки</a></li>
-							<li><a href="">Мягкая мебель</a></li>
-						</ul>
-					</li>
-					<li><a href="">Кухня</a></li>
-					<li><a href="">Ванная</a></li>
-				</ul>
+	</div>
+	<!-- Меню -->
+	<div class="menu">
+		<div class="menucontent">
+			<ul class="main-menu">
+				<li><a href="">Спальня</a></li>
+				<li><a href="">Гостиная</a></li>
+				<li><a href="">Прихожая</a></li>
+				<li>
+					<a href="">Детская комната</a>
+					<ul  class="sub-menu">
+						<li><a href="">Детские кровати</a></li>
+						<li><a href="">Комоды</a></li>
+						<li><a href="">Шкафы-купе</a></li>
+						<li><a href="">Детские стенки</a></li>
+						<li><a href="">Мягкая мебель</a></li>
+					</ul>
+				</li>
+				<li><a href="">Кухня</a></li>
+				<li><a href="">Ванная</a></li>
+			</ul>
+		</div>
+	</div>
+	<!-- Слайдер -->
+	<div class="slider">
+		<div id="myCarousel" class="carousel slide">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>
+
+		
+			<div class="carousel-inner">
+				<div class="item active">
+					<img src="images/slider1.png" style="height: 460px;" alt="">
+				</div>
+
+				<div class="item">
+					<img src="images/slider1.png" style="height: 460px;" alt="">
+				</div>
+
+				<div class="item">
+					<img src="images/slider1.png" style="height: 460px;" alt="">
+				</div>
 			</div>
 		</div>
+	</div>
+
+	<!-- Блок на слайдере -->
+
+	<div id="sliderBan">
+
+		<div id="bannerOutline">
+		<div id="banner">
+
+		<p id="banText">
+			<span id="a">Марафон скидок</span> <br>
+			<span id="b">до -35% на популярные коллекции</span> <br>
+			<span id="c">c 1 по 31 октября 2016 года</span>
+		</p>
+		
+	</div>
+
+	</div>
+	
+	</div>
+	<div id="btncont">
+		<button id="bannerBtn">Подробнее</button>
+	</div>
+	<!-- полоса после слайдера -->
+	<div id="infoLine">
+		
+	</div>
+	
+	
+
+	
+
+
+
+
+
+
+
+
+
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
